--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   mail:
     properties:
-#      "[mail.smtp.connectiontimeout]": 5000
-#      "[mail.smtp.timeout]": 3000
-#      "[mail.smtp.writetimeout]": 5000
+      "[mail.smtp.connectiontimeout]": 5000
+      "[mail.smtp.timeout]": 3000
+      "[mail.smtp.writetimeout]": 5000
       host: smtp.gmail.com
       port: 587
       username: ${username}
